# AERPAW_DEV

./: Dockerfile  Dockerfile.evm  README.md  buildgnb.sh  host  hosts  index.md  notes.txt  open5g_bash.sh  start5gcore.sh  start_trf.sh  toc.md
amf/src/nas/: CMakeLists.txt
amf/src/nas/common/: 3gpp_24.007.hpp  IeConst.hpp  NasIeHeader.hpp
amf/src/nas/ies/: Abba.hpp  Additional5gSecurityInformation.hpp  AdditionalInformation.cpp  AdditionalInformation.hpp  AuthenticationFailureParameter.hpp  AuthenticationParameterAutn.cpp  AuthenticationParameterRand.hpp  AuthenticationResponseParameter.hpp  Dnn.hpp  EapMessage.cpp  EapMessage.hpp  EpsBearerContextStatus.cpp  EpsBearerContextStatus.hpp  EpsNasMessageContainer.hpp  EpsNasSecurityAlgorithms.hpp  ExtendedDrxParameters.cpp  ExtendedProtocolDiscriminator.cpp  ExtendedProtocolDiscriminator.hpp  GprsTimer2.cpp  GprsTimer2.hpp  GprsTimer3.cpp  GprsTimer3.hpp  ImeisvRequest.cpp  ImeisvRequest.hpp  Ladn.cpp  Ladn.hpp  LadnIndication.cpp  LadnInformation.cpp  MicoIndication.hpp  NasIe.cpp  NasIe.hpp  NasKeySetIdentifier.cpp  NasKeySetIdentifier.hpp  NasMessageContainer.cpp  NasMessageContainer.hpp  NasSecurityAlgorithms.hpp  NetworkName.cpp  NetworkName.hpp  Non3gppNwProvidedPolicies.cpp  Non3gppNwProvidedPolicies.hpp  (+53 more)
amf/src/nas/msgs/: AuthenticationFailure.cpp  AuthenticationReject.hpp  AuthenticationRequest.cpp  AuthenticationRequest.hpp  AuthenticationResponse.cpp  AuthenticationResponse.hpp  DeregistrationRequest.cpp  DeregistrationRequest.hpp  DlNasTransport.cpp  DlNasTransport.hpp  IdentityRequest.cpp  IdentityRequest.hpp  IdentityResponse.cpp  IdentityResponse.hpp  NasMmPlainHeader.cpp  RegistrationComplete.cpp  RegistrationComplete.hpp  RegistrationReject.hpp  RegistrationRequest.cpp  SecurityModeCommand.cpp  SecurityModeCommand.hpp  SecurityModeReject.cpp  SecurityModeReject.hpp  ServiceAccept.cpp  ServiceRequest.cpp  ServiceRequest.hpp  UlNasTransport.cpp
amf/src/nas/utils/: TLVDecoder.c  TLVEncoder.c
amf/src/sbi/: CMakeLists.txt  amf_http1_server.cpp  amf_http1_server.hpp  amf_http2_server.cpp
amf/src/sbi/api/: AMFConfigurationApi.cpp  AMFConfigurationApi.h  IndividualSubscriptionDocumentApi.cpp  IndividualSubscriptionDocumentApiEventExposure.cpp  IndividualUeContextDocumentApi.cpp  N1MessageNotifyApi.cpp  N1MessageNotifyApi.h  N1N2MessageCollectionDocumentApi.cpp  N1N2SubscriptionsCollectionForIndividualUEContextsDocumentApi.cpp  N1N2SubscriptionsCollectionForIndividualUEContextsDocumentApi.h  NonUEN2MessageNotificationIndividualSubscriptionDocumentApi.cpp  NonUEN2MessagesCollectionDocumentApi.cpp  NonUEN2MessagesSubscriptionsCollectionDocumentApi.cpp  StatusNotifyApi.cpp  SubscriptionsCollectionDocumentApi.cpp
amf/src/sbi/impl/: AMFConfigurationApiImpl.cpp  AMFConfigurationApiImpl.h  IndividualSubscriptionDocumentApiImplEventExposure.cpp  N1N2IndividualSubscriptionDocumentApiImpl.cpp  N1N2MessageCollectionDocumentApiImpl.cpp  N1N2MessageCollectionDocumentApiImpl.h  NonUEN2MessagesCollectionDocumentApiImpl.cpp  NonUEN2MessagesCollectionDocumentApiImpl.h  StatusNotifyApiImpl.cpp  StatusNotifyApiImpl.h  SubscriptionsCollectionDocumentApiImplEventExposure.cpp
amf/src/sbi/model/: 5GsUserState.cpp  5GsUserStateInfo.cpp  5GsUserStateInfo.h  AllowedNssai.cpp  AllowedNssai.h  AllowedSnssai.cpp  AmfCreateEventSubscription.cpp  AmfCreateEventSubscription.h  AmfEventArea.cpp  AmfEventArea.h  AmfEventMode.cpp  AmfEventReport.cpp  AmfEventSubscription.cpp  AmfEventTrigger.cpp  AmfEventTrigger_anyOf.cpp  AmfEventType.cpp  AmfEventType_anyOf.cpp  AmfStatusInfo.cpp  AmfUpdatedEventSubscription.cpp  AreaOfValidity.cpp  AssignEbiData.cpp  AssignEbiData.h  AssignEbiError.cpp  AssignEbiFailed.cpp  AssignedEbiData.cpp  AssignedEbiData.h  Cause.cpp  Cause.h  CmInfo.cpp  CmState_anyOf.cpp  CommunicationFailure.cpp  CommunicationFailure.h  ConfiguredSnssai.cpp  EbiArpMapping.cpp  EbiArpMapping.h  EbiArpMapping_2.cpp  ExpectedUeBehavior.cpp  LadnInfo.h  LocationFilter_anyOf.cpp  LossOfConnectivityReason.cpp  (+61 more)
openair-amf/src/amf-app/: CMakeLists.txt  amf_app.cpp  amf_cfg_libconfig.hpp  amf_config.cpp  amf_config.hpp  amf_config_yaml.cpp  amf_event.hpp  amf_event_sig.hpp  amf_n1.hpp  amf_n2.hpp  amf_sbi.cpp  amf_statistics.hpp  mysql_db.cpp
openair-amf/src/ngap/: CMakeLists.txt  CODEOWNERS  README.md
openair-amf/src/ngap/libngap/: ANY.c  ANY_aper.c  BIT_STRING.h  BIT_STRING_print.c  GraphicString.h  NULL_aper.c  NativeEnumerated.c  NativeInteger_oer.c  NativeInteger_print.c  Ngap_AMF-TNLAssociationSetupItem.c  Ngap_AMF-TNLAssociationToAddList.h  Ngap_AMF-TNLAssociationToRemoveItem.c  Ngap_AMF-TNLAssociationToUpdateItem.h  Ngap_AMF-TNLAssociationToUpdateList.c  Ngap_AMF-UE-NGAP-ID.h  Ngap_AMFConfigurationUpdateAcknowledge.h  Ngap_AMFNameUTF8String.c  Ngap_AMFNameUTF8String.h  Ngap_AMFNameVisibleString.c  Ngap_AMFNameVisibleString.h  Ngap_AMFPagingTarget.c  Ngap_AMFPointer.c  Ngap_AMFPointer.h  Ngap_AMFRegionID.c  Ngap_AdditionalQosFlowInformation.c  Ngap_AllocationAndRetentionPriority.c  Ngap_AllocationAndRetentionPriority.h  Ngap_Allowed-PNI-NPN-List.c  Ngap_AllowedNSSAI-Item.c  Ngap_AllowedNSSAI.c  Ngap_AlternativeQoSParaSetItem.c  Ngap_AlternativeQoSParaSetList.c  Ngap_AlternativeQoSParaSetList.h  Ngap_AreaOfInterest.c  Ngap_AreaOfInterest.h  Ngap_AreaOfInterestCellItem.h  Ngap_AreaOfInterestRANNodeItem.h  Ngap_AreaOfInterestRANNodeList.c  Ngap_AreaOfInterestTAIList.h  Ngap_AreaScopeOfMDT-EUTRA.c  (+611 more)
openair-amf/src/ngap/ngapIEs/: AdditionalQosFlowInformation.hpp  AmfUeNgapId.hpp  DrbStatusDl.hpp  (+106 more)
udr/src/udr_app/: CMakeLists.txt  cassandra_db.cpp  cassandra_db.hpp  database_wrapper.hpp  database_wrapper_abstraction.hpp  mongo_db.cpp  mongo_db.hpp  mysql_db.cpp  mysql_db.hpp  task_manager.cpp  task_manager.hpp  udr_app.cpp  udr_app.hpp  udr_client.cpp  udr_client.hpp  udr_config.cpp  udr_config.hpp  udr_config_yaml.cpp  udr_config_yaml.hpp  udr_event.cpp  udr_event.hpp  udr_event_sig.hpp  udr_nrf.cpp  udr_nrf.hpp  udr_profile.cpp  udr_profile.hpp
upf-oai/src/upf_app/: CMakeLists.txt  Configuration.h  SignalHandler.cpp  SignalHandler.h
(+4636 files in other folders)
